GFTTT-105 Fixed Saving Throws, needs alignment

--- a/src/components/pages/buildCharacter.css
+++ b/src/components/pages/buildCharacter.css
@@ -48,34 +48,37 @@
   flex-direction: row-reverse;
 }
 
-#SkillsPane { 
+#SkillsPane {
   flex-grow: 0.3;
   flex-direction: column;
   display: table;
   margin-top: 30px;
 }
 
-#SkillsTopBar { 
+#SkillsTopBar {
   display: flex;
-  flex-direction: row-reverse; 
+  flex-direction: row-reverse;
 }
 
-.prof { 
+.prof,
+.saveThrowIcon {
   display: inline-block;
   width: 1rem;
   height: 1rem;
   margin-right: 5px;
 }
 
-.prof-bonus { 
+.prof-bonus,
+.saveThrowBonus {
   display: inline-block;
   text-align: right;
-  width: 25px; 
+  width: 25px;
   font-weight: bold;
   font-size: large;
 }
 
-.skills-list { 
+.skills-list,
+.saveThrowName {
   display: inline-block;
   font-size: 1.1rem;
   margin-left: 5px;
@@ -353,4 +356,10 @@
 
 .FT {
   margin-bottom: 125px;
+}
+
+#SavingThrowsList {
+  display: table;
+  direction: column;
+  padding-top: 20px;
 }
